--- a/examples/sinatra-pet-shelter/Gemfile
+++ b/examples/sinatra-pet-shelter/Gemfile
@@ -3,11 +3,12 @@
 source 'https://rubygems.org'
 
 gem 'json'
+gem 'resource_registry', github: 'factorialco/resource-registry'
 gem 'sinatra'
 gem 'sinatra-contrib'
 
 group :development, :test do
   gem 'pry'
+  gem 'rack-test'
   gem 'rspec'
-  gem 'rspec-html-matchers'
 end
