--- a/examples/sinatra-pet-shelter/Gemfile
+++ b/examples/sinatra-pet-shelter/Gemfile
@@ -3,7 +3,7 @@
 source 'https://rubygems.org'
 
 gem 'json'
-gem 'resource_registry', github: 'factorialco/resource-registry'
+gem 'resource_registry', github: 'factorialco/resource-registry', branch: 'adding-example-app'
 gem 'sinatra'
 gem 'sinatra-contrib'
 
