--- a/examples/sinatra-pet-shelter/Gemfile
+++ b/examples/sinatra-pet-shelter/Gemfile
@@ -1,14 +1,17 @@
 # frozen_string_literal: true
 
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-gem 'json'
-gem 'resource_registry', github: 'factorialco/resource-registry', branch: 'adding-example-app'
-gem 'sinatra'
-gem 'sinatra-contrib'
+gem "json"
+gem "resource_registry",
+    github: "factorialco/resource-registry",
+    branch: "adding-example-app"
+gem "sinatra"
+gem "sinatra-contrib"
+gem "tapioca", "~> 0.15.1", require: false
 
 group :development, :test do
-  gem 'pry'
-  gem 'rack-test'
-  gem 'rspec'
+  gem "pry"
+  gem "rack-test"
+  gem "rspec"
 end
