--- a/examples/sinatra-pet-shelter/Gemfile
+++ b/examples/sinatra-pet-shelter/Gemfile
@@ -3,9 +3,7 @@
 source "https://rubygems.org"
 
 gem "json"
-gem "resource_registry",
-    github: "factorialco/resource-registry",
-    branch: "adding-example-app"
+gem "resource_registry", github: "factorialco/resource-registry", branch: "main"
 gem "sinatra"
 gem "sinatra-contrib"
 gem "tapioca", "~> 0.15.1", require: false
